SSL HTTPS and minor UI fixes
Added polyfill

SSL HTTPS and minor UI fixes

Tests

Adding wrapper

Adding sourcemaps and removing cordova

Removing uglify for debug

CORS

Adding HTTPS and supporting configs

Loading env

Removing too much anim

Adding additional error message

Improved SSL

Prevent double popup

Updating package.json

Forcing master to be on 443

--- a/resources/styles/registration.scss
+++ b/resources/styles/registration.scss
@@ -40,23 +40,29 @@ a {
   text-align: center;
   font-weight: bold;
   cursor: pointer;
-  //margin: 10px;
-  //border-radius: 5px;
+  transition: background 300ms;
+  &:active {
+    background: #103f69;
+  }
+}
+
+.input-wrapper {
+  padding: 5px;
+  background: #EEE;
 }
 
 .input {
-  border-radius: 0px;
   color: #000;
   background: #FFF;
-  letter-spacing: 1px;
   line-height: 19px;
-  padding: 16px;
+  padding: 12px;
   font-size: 15px;
   width: 100%;
   text-align: center;
   margin: 0;
-  letter-spacing: 0;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  font-weight: bold;
+  border: 1px solid #DDD;
 }
 
 .blur {
@@ -86,4 +92,88 @@ video {
 
 .translate-up {
   transform: translate3d(0, -250px, 0);
+}
+
+.phone {
+  width: 325px;
+  margin: 0 auto;
+  max-width: 325px;
+  height: 665px;
+  max-height: 665px;
+  background: url(../images/iphone-black.png) no-repeat;
+  background-size: 101% auto;
+  padding: 85px 19px 85px 22px;
+  box-shadow: 0 0 100px #000;
+  border-radius: 46px;
+  > .viewport {
+    background: #EEE;
+    width: 100%;
+    height: 68%;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+  }
+
+  .status-bar {
+    height: 20px;
+    min-height: 20px;
+    max-height: 20px;
+    background: url(../images/header.jpg) no-repeat center center;
+    background-size: 100% auto;
+  }
+}
+
+.catchphrase {
+  font-size: 17px;
+  color: #FFF;
+  letter-spacing: 0px;
+}
+
+.main-logo {
+  background: url(../images/logo2.png);
+  background-size: cover;
+  width: 195px;
+  height: 90px;
+}
+
+.background {
+  background: url(../images/top.jpg) 10% center;
+  background-size: cover;
+}
+
+.phone-wrapper {
+  padding: 15px 0;
+  width: 100%;
+  position: fixed;
+  bottom: -400px;
+  left: 0;
+  right: 0;
+}
+
+.modal {
+  background: #000;
+  box-shadow: 0 -10px 50px rgba(0, 0, 0, 0.3);
+  z-index: 10;
+  padding: 0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  right: 0;
+}
+
+.secondary-logo-wrapper {
+  position: absolute;
+  top: -60px;
+  height: 50px;
+  width: 100%;
+  opacity: 1;
+}
+
+.secondary-logo {
+  background: url(../images/logo2.png) left center;
+  background-size: cover;
+  height: 60px;
+  width: 45px;
+  margin: 0 auto;
 }
